k8s/policy/validate-task-request-namespace/template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8svalidatetaskrequestnamespace
spec:
  crd:
    spec:
      names:
        kind: K8sValidateTaskRequestNamespace

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8svalidatetaskrequestnamespace

        # ---------------------------------------------------------------------
        # Violation: TaskRequest is being created in a namespace other than 'compute'
        # ---------------------------------------------------------------------
        violation[{"msg": msg}] {
          input.review.object.metadata.namespace != "compute"

          msg := sprintf(
            "Operation denied, TaskRequest can only be instantiated in the 'compute' namespace. Requested namespace: '%v'",
            [input.review.object.metadata.namespace]
          )
        }
